--- a/e_waste_management/templates/home.html
+++ b/e_waste_management/templates/home.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,7 +24,7 @@
     <section>
         <h2>E-Waste Collection Made Easy</h2>
         <p>Request a pickup or find the nearest collection point.</p>
-        <button><a href="{% url 'request_pickup' %}">Schedule a Pickup</a></button>
+        <button><a href="{% url 'pickup' %}">Schedule a Pickup</a></button>
     </section>
 
     <footer>
