--- a/e_waste_management/templates/about.html
+++ b/e_waste_management/templates/about.html
@@ -7,6 +7,33 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <div class="header" style=" display: flex;
+    background-color: green;">
+            <img src="{% static 'images/ewaste_logo.jpg' %}" alt="My Image" class="image" style="width: 100px;
+            height: 100px;
+            border-radius: 50px;
+            margin-left: 10px;">
+                <nav>
+                    <ul class="menu">
+                        <li><a href="{% url 'home' %}" style="margin-right: 10px;
+                        margin-left: 750px; color: white;"
+                        onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Home</a></li>
+                        <li><a href="{% url 'about' %}" style="margin-right: 10px; color: white;"
+                            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">About Us</a></li>
+                        <li><a href="{% url 'learnmore' %}" style="margin-right: 10px; color: white;"
+                            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">How it works</a></li>
+                        <li><a href="{% url 'login' %}" style="margin-right: 10px; color: white;"
+                            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Login</a></li>
+                        <li><a href="{% url 'register' %}" style="margin-right: 10px; color: white;"
+                            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Register</a></li>
+                        <li><a href="{% url 'contactus' %}" style="margin-right: 10px; color: white;"
+                            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Contact Us</a></li>
+                    </ul>
+                </nav>
+        </div>
+            </header>
+
     <h1>About Us</h1>
     <p>EnviroServe Kenya aims to address these challenge of improper electronic disposal by 
         introducing an innovative website-based e-waste collection service. 
@@ -14,5 +41,29 @@
         disposal of electronic devices, ensuring environmentally-friendly recycling practices. 
         Through this service, we aim to reach a wider population, educate the public on sustainable 
         recycling, and help reduce the negative environmental impact of e-waste.</p>
+
+        <footer style="background-color: green; color: white;">
+            <div style="display: flex;">
+                <div style="margin-left: 400px;">
+                    <h3>Contacts</h3>
+                    <p>Phone: 0781567890</p>
+                    <p>Phone: 0722345678</p>
+                    <p>Location: Nyeri, Kenya</p>
+                    <p>Email: enviroServeKenyaCompanyLTD@gmail.com</p>
+                    </div>
+                   <div style="margin-left: 200px;">
+                    <h3>Follow Us</h3>
+                    <ul>
+                        <li>Facebook</li>
+                        <li>Twitter</li>
+                        <li>Instagram</li>
+                        <li>LinkedIn</li>
+                    </ul>
+                   </div>
+            </div>
+    
+            <p style="text-align: center; background-color: rgb(48, 45, 45); 
+            height: 50px;">&copy; 2025 EnviroServe Kenya. All Rights Reserved.</p>
+        </footer>
 </body>
 </html>
