--- a/e_waste_management/templates/home.html
+++ b/e_waste_management/templates/home.html
@@ -67,22 +67,28 @@
             upgrading their electronic devices, which leads to an increase in e-waste.</p>
     </section>
 
-    <footer>
-        <h3>Contacts</h3>
-        <p>Phone: 0781567890</p>
-        <p>Phone: 0722345678</p>
-        <p>Location: Nyeri, Kenya</p>
-        <p>Email: enviroServeKenyaCompanyLTD@gmail.com</p>
-        <h3>Social Media Platforms</h3>
-        <h3>Follow Us</h3>
-        <ul>
-            <li>Facebook</li>
-            <li>Twitter</li>
-            <li>Instagram</li>
-            <li>LinkedIn</li>
-        </ul>
+    <footer style="background-color: green; color: white;">
+        <div style="display: flex;">
+            <div style="margin-left: 400px;">
+                <h3>Contacts</h3>
+                <p>Phone: 0781567890</p>
+                <p>Phone: 0722345678</p>
+                <p>Location: Nyeri, Kenya</p>
+                <p>Email: enviroServeKenyaCompanyLTD@gmail.com</p>
+                </div>
+               <div style="margin-left: 200px;">
+                <h3>Follow Us</h3>
+                <ul>
+                    <li>Facebook</li>
+                    <li>Twitter</li>
+                    <li>Instagram</li>
+                    <li>LinkedIn</li>
+                </ul>
+               </div>
+        </div>
 
-        <p>&copy; 2025 EnviroServe Kenya. All Rights Reserved.</p>
+        <p style="text-align: center; background-color: rgb(48, 45, 45); 
+        height: 50px;">&copy; 2025 EnviroServe Kenya. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
