--- a/e_waste_management/templates/learnmore.html
+++ b/e_waste_management/templates/learnmore.html
@@ -53,6 +53,30 @@
             After the collection is completed, users can provide feedback on their experience with the service, which helps EnviroServe Kenya improve the platform.
         Users can also suggest features or improvements, ensuring the platform evolves to meet their needs over time.
         </p>
+
+        <footer style="background-color: green; color: white;">
+            <div style="display: flex;">
+                <div style="margin-left: 400px;">
+                    <h3>Contacts</h3>
+                    <p>Phone: 0781567890</p>
+                    <p>Phone: 0722345678</p>
+                    <p>Location: Nyeri, Kenya</p>
+                    <p>Email: enviroServeKenyaCompanyLTD@gmail.com</p>
+                    </div>
+                   <div style="margin-left: 200px;">
+                    <h3>Follow Us</h3>
+                    <ul>
+                        <li>Facebook</li>
+                        <li>Twitter</li>
+                        <li>Instagram</li>
+                        <li>LinkedIn</li>
+                    </ul>
+                   </div>
+            </div>
+    
+            <p style="text-align: center; background-color: rgb(48, 45, 45); 
+            height: 50px;">&copy; 2025 EnviroServe Kenya. All Rights Reserved.</p>
+        </footer>
         
 </body>
 </html>
