--- a/e_waste_management/templates/home.html
+++ b/e_waste_management/templates/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-<div class="header">
+<div class="header" style=" padding-top: 10px; padding-bottom: 10px;">
     <img src="{% static 'images/ewaste_logo.jpg' %}" alt="My Image" class="image">
 
        
@@ -35,7 +35,8 @@
 
     <section>
         
-        <p style="font-size: 50px; color: rgb(10, 207, 10);" class="moving-text">Welcome to EnviroServe Kenya Company LTD</p>
+        <p style="font-size: 50px; color: rgb(10, 207, 10);" class="moving-text"
+        >Welcome to EnviroServe Kenya Company LTD</p>
         
         <div>
             <button style="padding: 10px; border-radius: 50px; margin-left: 285px;
@@ -176,7 +177,7 @@
         </div>
 
         <p style="text-align: center; background-color: rgb(48, 45, 45); 
-        height: 50px;">&copy; 2025 EnviroServe Kenya. All Rights Reserved.</p>
+        height: 50px; padding-top: 30px;">&copy; 2025 EnviroServe Kenya. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
