--- a/e_waste_management/templates/learnmore.html
+++ b/e_waste_management/templates/learnmore.html
@@ -5,8 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
+
+    <header>
+        <div class="header" style=" padding-top: 10px; padding-bottom: 10px;">
+            <img src="{% static 'images/ewaste_logo.jpg' %}" alt="My Image" class="image">
+        
+               
+                <nav>
+                    <ul class="menu">
+                        <li><a href="{% url 'home' %}" style="margin-right: 10px;
+                        margin-left: 750px; color: white;"
+                        onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Home</a></li>
+                        <li><a href="{% url 'about' %}" style="margin-right: 10px; color: white;"
+                            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">About Us</a></li>
+                        <li><a href="{% url 'learnmore' %}" style="margin-right: 10px; color: white;"
+                            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">How it works</a></li>
+                        <li><a href="{% url 'login' %}" style="margin-right: 10px; color: white;"
+                            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Login</a></li>
+                        <li><a href="{% url 'register' %}" style="margin-right: 10px; color: white;"
+                            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Register</a></li>
+                        <li><a href="{% url 'contactus' %}" style="margin-right: 10px; color: white;"
+                            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Contact Us</a></li>
+                    </ul>
+                </nav>
+        </div>
+            </header>
+        
     <h1>How it works</h1>
     <p><b>Creating an Account & Logging In:</b></p>
         <p>
@@ -75,7 +102,7 @@
             </div>
     
             <p style="text-align: center; background-color: rgb(48, 45, 45); 
-            height: 50px;">&copy; 2025 EnviroServe Kenya. All Rights Reserved.</p>
+            height: 50px; padding-top: 30px">&copy; 2025 EnviroServe Kenya. All Rights Reserved.</p>
         </footer>
         
 </body>
