--- a/e_waste_management/templates/about.html
+++ b/e_waste_management/templates/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>E-Waste | About Us</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
@@ -43,7 +43,7 @@
         Through this service, we aim to reach a wider population, educate the public on sustainable 
         recycling, and help reduce the negative environmental impact of e-waste.</p>
 
-        <footer style="background-color: green; color: white;">
+        <footer style="background-color: green; color: white; margin-top: 80px;">
             <div style="display: flex;">
                 <div style="margin-left: 400px;">
                     <h3>Contacts</h3>
