--- a/e_waste_management/templates/contactus.html
+++ b/e_waste_management/templates/contactus.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>E-Waste | Contact Us</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
@@ -34,20 +34,25 @@
         </div>
             </header>
         
-
-    <h3>Contacts</h3>
-    <p>Phone: 0781567890</p>
-    <p>Phone: 0722345678</p>
-    <p>Location: Nyeri, Kenya</p>
-    <p>Email: enviroServeKenyaCompanyLTD@gmail.com</p>
-    <h3>Social Media Platforms</h3>
-    <h3>Follow Us</h3>
-    <ul>
-        <li>Facebook</li>
-        <li>Twitter</li>
-        <li>Instagram</li>
-        <li>LinkedIn</li>
-    </ul>
+            <div style="display: flex;">
+                <div style="margin-left: 400px;">
+                    <h3>Contacts</h3>
+                    <p>Phone: 0781567890</p>
+                    <p>Phone: 0722345678</p>
+                    <p>Location: Nyeri, Kenya</p>
+                    <p>Email: enviroServeKenyaCompanyLTD@gmail.com</p>
+                    </div>
+                   <div style="margin-left: 200px;">
+                    <h3>Follow Us</h3>
+                    <ul>
+                        <li>Facebook</li>
+                        <li>Twitter</li>
+                        <li>Instagram</li>
+                        <li>LinkedIn</li>
+                    </ul>
+                   </div>
+            </div>
+    
        
 </body>
 </html>
