--- a/e_waste_management/templates/register.html
+++ b/e_waste_management/templates/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>E-Waste | Register</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
@@ -34,14 +34,24 @@
         </div>
             </header>
         
-    <h1>Register</h1>
+    <h1 style="margin-left: 650px;">Register</h1>
     <form action="#" method="POST">
-        <p><input type="text" placeholder="Username" name="username" required></p>
-        <p><input type="password" placeholder="Password" name="password" required></p>
-        <p><input type="password" placeholder="Confirm Password" name="password" required></p>
-        <button type="submit" class="btn">Register</button>
-        <p>Already have an account?</p>
-        <a href="{% url 'login' %}">Login</a>
+        <p style="text-align: center;"><input style="width: 400px; height: 30px; font-size: 15px;" 
+            type="text" placeholder="Username" name="username" required></p>
+
+        <p style="text-align: center;"><input style="width: 400px; height: 30px; font-size: 15px;"
+             type="password" placeholder="Password" name="password" required></p>
+
+        <p style="text-align: center;"><input input style="width: 400px; height: 30px; font-size: 15px;"
+             type="password" placeholder="Confirm Password" name="password" required></p>
+
+        <button type="submit" class="btn" style="margin-left: 650px; color: white;
+        border: none; background-color: rgb(0, 140, 255);padding: 10px; border-radius: 50px; 
+        font-size: 15px;"
+        onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Register</button>
+
+        <p style="text-align: center;">Already have an account?</p>
+        <a href="{% url 'login' %}" style="margin-left: 650px;">Login</a>
     </form>
 </body>
 </html>
