--- a/e_waste_management/templates/home.html
+++ b/e_waste_management/templates/home.html
@@ -41,14 +41,16 @@
         >Welcome to EnviroServe Kenya Company LTD</p>
         
         <div>
+
             <button style="padding: 10px; border-radius: 50px; margin-left: 285px;
             border: none; background-color: rgb(0, 140, 255); "><a href="{% url 'pickup' %}" 
             style="color: white;"
             onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Schedule a Pickup</a></button>
 
             <button style="padding: 10px; border-radius: 50px; margin-left: 540px;
-            border: none; background-color: rgb(0, 140, 255); color: white;"
-            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Track recycling</button>
+            border: none; background-color: rgb(0, 140, 255); "><a href="{% url 'track' %}" 
+            style="color: white;"
+            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Track recycling</a></button>
         </div>
 
         <div style="display: flex; display: flex; justify-content: center;
