--- a/e_waste_management/static/css/style.css
+++ b/e_waste_management/static/css/style.css
@@ -3,7 +3,7 @@ body{
 }
 .header{
     display: flex;
-    background-color: green;
+    background-color: rgb(3, 61, 148);
 }
 .image{
     width: 100px;
