--- a/e_waste_management/templates/learnmore.html
+++ b/e_waste_management/templates/learnmore.html
@@ -16,18 +16,18 @@
                
                 <nav>
                     <ul class="menu">
-                        <li><a href="{% url 'home' %}" style="margin-right: 10px;
+                        <li><a href="{% url 'home' %}" style="margin-right: 20px; text-decoration: none;;
                         margin-left: 750px; color: white;"
                         onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Home</a></li>
-                        <li><a href="{% url 'about' %}" style="margin-right: 10px; color: white;"
+                        <li><a href="{% url 'about' %}" style="margin-right: 20px; text-decoration: none; color: white;"
                             onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">About Us</a></li>
-                        <li><a href="{% url 'learnmore' %}" style="margin-right: 10px; color: white;"
+                        <li><a href="{% url 'learnmore' %}" style="margin-right: 20px; text-decoration: none; color: white;"
                             onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">How it works</a></li>
-                        <li><a href="{% url 'login' %}" style="margin-right: 10px; color: white;"
+                        <li><a href="{% url 'login' %}" style="margin-right: 20px; text-decoration: none;color: white;"
                             onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Login</a></li>
-                        <li><a href="{% url 'register' %}" style="margin-right: 10px; color: white;"
+                        <li><a href="{% url 'register' %}" style="margin-right: 20px; text-decoration: none; color: white;"
                             onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Register</a></li>
-                        <li><a href="{% url 'contactus' %}" style="margin-right: 10px; color: white;"
+                        <li><a href="{% url 'contactus' %}" style="margin-right: 5px; text-decoration: none; color: white;"
                             onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Contact Us</a></li>
                     </ul>
                 </nav>
