--- a/e_waste_management/templates/pickup.html
+++ b/e_waste_management/templates/pickup.html
@@ -104,8 +104,8 @@ footer {
         <h1>Schedule a Pickup</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="track_recycling.html">Track Recycling</a></li>
+                <li><a href="{% url 'home' %}">Home</a></li>
+                <li><a href="{% url 'track' %}">Track Recycling</a></li>
             </ul>
         </nav>
     </header>
