--- a/e_waste_management/templates/track.html
+++ b/e_waste_management/templates/track.html
@@ -105,8 +105,8 @@ footer {
         <h1>Track Recycling</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="schedule_pickup.html">Schedule a Pickup</a></li>
+                <li><a href="{% url 'home' %}">Home</a></li>
+                <li><a href="{% url 'pickup' %}">Schedule a Pickup</a></li>
             </ul>
         </nav>
     </header>
