--- a/e_waste_management/templates/resetpassword.html
+++ b/e_waste_management/templates/resetpassword.html
@@ -8,41 +8,23 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
+        
+    <div style="background-color: #f5f5f5; padding-top: 20px;padding-bottom: 100px;
+    padding-left: 20px;
+    padding-right: 20px; border-radius: 10px; width: 500px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin: 0 auto; margin-top: 100px; margin-bottom: 50px;">
 
-    <header>
-        <div class="header" style=" padding-top: 10px; padding-bottom: 10px;">
-            <img src="{% static 'images/ewaste_logo.jpg' %}" alt="My Image" class="image">
-        
-               
-                <nav>
-                    <ul class="menu">
-                        <li><a href="{% url 'home' %}" style="margin-right: 10px;
-                        margin-left: 750px; color: white;"
-                        onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Home</a></li>
-                        <li><a href="{% url 'about' %}" style="margin-right: 10px; color: white;"
-                            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">About Us</a></li>
-                        <li><a href="{% url 'learnmore' %}" style="margin-right: 10px; color: white;"
-                            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">How it works</a></li>
-                        <li><a href="{% url 'login' %}" style="margin-right: 10px; color: white;"
-                            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Login</a></li>
-                        <li><a href="{% url 'register' %}" style="margin-right: 10px; color: white;"
-                            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Register</a></li>
-                        <li><a href="{% url 'contactus' %}" style="margin-right: 10px; color: white;"
-                            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Contact Us</a></li>
-                    </ul>
-                </nav>
-        </div>
-            </header>
-        
-    <div>
-        <h2>Forgot Password</h2>
-        <p>Enter your new password and then comfirm your password</p>
+        <h1 style="text-align: center;">Forgot Password</h1>
+        <p style="text-align: center;">Enter your new password and then comfirm your password</p>
         <form action="#" method="POST">
-            <p><input type="text" placeholder="New password" name="email" required></p>
-            <p><input type="text" placeholder="Confirm password" name="email" required></p>
-            <button>Send Reset Link</button>
+
+            <p style="text-align: center;"><input style="width: 400px; height: 30px; font-size: 15px;" 
+                type="text" placeholder="New password" name="email" required></p>
+
+            <p style="text-align: center;"><input style="width: 400px; height: 30px; font-size: 15px;" 
+                type="text" placeholder="Confirm password" name="email" required></p>
         </form>
-        <a href="{% url 'login' %}">Back to Login</a>
+        <a href="{% url 'login' %}" style="margin-left: 200px;">Back to Login</a>
     </div> 
 </body>
 </html>
